added weakening rule to lecture 8

--- a/lectures/08-sfi.tex
+++ b/lectures/08-sfi.tex
@@ -296,8 +296,17 @@ We complete the proof of subtree \textcircled{1} this way, and can move on with 
 \end{itemize}
 
 Now we complete this case of the proof by deriving \textcircled{2}.
+Note that we begin by applying the \irref{weakenl} rule, which removes some unneeded assumptions from our context and makes the proof more concise.
+\[
+\cinferenceRule[weakenl|W\leftrule]{left weakening}
+{\linferenceRule[sequent]
+  {\lsequent[L]{}{}}
+  {\lsequent[L]{\asfml}{}}
+}{}%
+\]
+This rule is perfectly sound, which you can verify yourself as a proof exercise.
 \begin{sequentdeduction}
-\linfer[G] {
+\linfer[weakenl] {
   \linfer[cut] {
     \linfer[mreadneq] {
       \linfer[id]{\lclose}{\lsequent{\pderef{i}=v,i \ne (\astrm \bitand s_h) \bitor s_l}{i \ne (\astrm \bitand s_h) \bitor s_l}}
