fixed lecture note bugs

--- a/lectures/03-safety.tex
+++ b/lectures/03-safety.tex
@@ -6,10 +6,11 @@
 \newcommand{\leccourse}{Software Foundations of Security and Privacy}
 \newcommand{\lecdate}{} %e.g. {October 21, 2013}
 \newcommand{\lecnum}{3}
-\newcommand{\lectitle}{Semantics, Safety, \& Dynamic Logic\footnote{Based on lecture notes contributed by Andr\'e Plazter}}
+\newcommand{\lectitle}{Semantics, Safety, \& Dynamic Logic}
 \newcommand{\lecturer}{Matt Fredrikson}
-% \newcommand{\lecurl}{https://15316-cmu.github.io/index}
+\newcommand{\lecurl}{https://15316-cmu.github.io/index}
 
+\usepackage{varwidth}
 \usepackage{lecnotes}
 \usepackage[irlabel]{bugcatch}
 \usepackage{xspace}
@@ -21,7 +22,7 @@
 % \newcommand{\alternative}{~|~}
 % \newcommand{\asfml}{F}
 % \newcommand{\bsfml}{G}
-\newcommand{\errstate}{\ensuremath{\Lambda}\xspace}
+% \newcommand{\errstate}{\ensuremath{\Lambda}\xspace}
 % \def\leftrule{L}%
 % \def\rightrule{R}%
 
@@ -257,7 +258,7 @@ The \dfn[valuation!of~programs]{trace semantics $\iaccess[\alpha]{\I}$ of a prog
       \(\iaccess[\pwhile{\ivr}{\alpha}]{\I}\)
 =\(\{\atrace^{(0)} \compose \atrace^{(1)} \compose \dots \compose \atrace^{(n)} \with\)
 for some $n\geq0$
-such that for all $0\leq i<n$:
+such that for all $0\leq i \leq n$:
 \textcircled{1} the loop condition is true \m{\atrace^{(i)}_0 \models \ivr} and
 \textcircled{2}
 \m{\atrace^{(i)} \in \iaccess[\asprg]{\Iz[i]}}
