--- a/lectures/07-memsandbox.tex
+++ b/lectures/07-memsandbox.tex
@@ -267,7 +267,7 @@ In the case where $\astrm\ne\astrm'$, we use similar reasoning to conclude that 
 {\linferenceRule[sequent]
   {
     \lsequent{\Gamma}{\astrm\ne\astrm'}
-    &\lsequent{\Gamma}{0 \le \astrm < \maxmem}
+    &\lsequent{\Gamma}{0 \le \astrm' < \maxmem}
   }
   {\lsequent{\Gamma}{\memupd{\pderefop}{\astrm}{\bstrm}(\astrm')=\pderef{\astrm'}}}
 }{}%
